Commit resolved issues - css issues & dashboard to workorder redirection issue

--- a/kriyasheela/stylesheets/style.css
+++ b/kriyasheela/stylesheets/style.css
@@ -215,6 +215,8 @@ body {
 	border: 1px solid #40ab3e;
 }
 
+ /* ============Amruta Code Start========================= */
+
 /* ==== Form which is common for workorder,worksheet,userform,client form ====*/
 .userform {
 	border: 1px solid #ecf0f3;
@@ -222,7 +224,7 @@ body {
 	margin-bottom: 100px;
 	border-radius: 7px;
 	color: rgb(0, 0, 0);
-	background: #3cfafa8d !important;
+	background: #eaeae8a9 !important;
 	box-shadow: 2px 2px 4px #cbced1;
 }
 select {
@@ -302,14 +304,14 @@ select.classic:focus {
 	position: fixed;
 	height: 100%;
 	width: 240px;
-	background: #0a2558;
+	background: #324260;
 	transition: all 0.5s ease;
 }
 .sidebar.active {
 	width: 60px;
 }
 .sidebar .logo-details {
-	height: 80px;
+	height: 48px;
 	display: flex;
 	align-items: center;
 }
@@ -334,12 +336,14 @@ select.classic:focus {
 	height: 50px;
 }
 .sidebar .nav-links li a {
-	height: 100%;
+	height: 1%;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	text-decoration: none;
 	transition: all 0.4s ease;
+	margin-top: 68px;
+	margin-left: 18px;
 }
 
 /* .sidebar .nav-links li a.active{
@@ -359,6 +363,7 @@ select.classic:focus {
 	font-size: 14px;
 	font-weight: 400;
 	white-space: nowrap;
+	margin-left: -9px;
 }
 .sidebar .nav-links .log_out {
 	position: absolute;
@@ -550,14 +555,16 @@ nav .profile-details i {
 	display: flex;
 	justify-content: space-between;
 	/* padding: 0 20px; */
+	height: 630px;
+    margin-top: -34px;
 }
 
 /* left box */
 .home-content .sales-boxes .recent-sales {
 	width: 65%;
-	background: #edf1d6;
+	background: #eaeae8a9;
 	padding: 19px 187px;
-	margin: 0 22px;
+	margin: 0 11px;
 	border-radius: 12px;
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -608,9 +615,9 @@ nav .profile-details i {
 /* Right box */
 .home-content .sales-boxes .top-sales {
 	width: 35%;
-	background: #edf1d6;
+	background: #eaeae8a9;
 	padding: 31px 85px;
-	margin: 0 20px 0 0;
+	margin: 0 12px 0 0;
 	border-radius: 12px;
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
@@ -639,6 +646,7 @@ nav .profile-details i {
 	font-weight: 400;
 	color: #333;
 }
+
 /* Responsive Media Query */
 @media (max-width: 1240px) {
 	.sidebar {
@@ -696,6 +704,7 @@ nav .profile-details i {
 	}
 	.home-content .sales-boxes .sales-details {
 		width: 560px;
+		margin-top: -82px;
 	}
 }
 @media (max-width: 550px) {
@@ -732,6 +741,9 @@ nav .profile-details i {
 	}
 }
 
+
+
+
 /* notification css */
 
 .notification-icon {
@@ -748,7 +760,197 @@ nav .profile-details i {
 	background-color: red;
 	color: white;
 }
-/* === Testing === */
+
+
+/* profile password change password button */
+
+.float-right{
+	color: #fff;
+    background-color: #2b4cf1;
+    border: none;
+    border-radius: 6px;
+    width: 64%;
+    height: 42px;
+}
+
+
+
+
+/* myprofile dropdown css */
+
+.dropdown-menu {
+    position: absolute;
+    /* right: -9px; */
+    margin-left: -42px;
+}
+
+/* table for all text align  */
+
+tbody {
+    text-align: center;
+}
+
+/* .oldPass{
+	
+	
+	height: 40px !important;
+}
+.oldPass:focus{
+	
+
+	height: 40px !important;
+} */
+
+span#msg1 {
+    /* margin-top: 10px !important; */
+    position: absolute;
+	top: 192px;
+    left: 250px;
+}
+.mb-2, .my-2 {
+    margin-bottom: 2.5rem!important;
+}
+/* responsive */
+
+@media screen and (max-width: 600px){
+.navbar{
+	background-color: rgb(255, 255, 255) !important;
+	text-align: center !important;
+	padding-top: 10px;
+}
+.logo{
+	display: none;
+}
+.navbar-toggler{
+	background-color: yellow !important;
+	position: relative;
+	right: -305px;
+}
+}
+
+@media (max-width: 1150px){
+.home-content .sales-boxes .top-sales {
+    margin: 0;
+    /* background: blue; */
+}
+}
+
+@media (max-width: 1150px){
+.home-content .sales-boxes .box {
+    width: 100%;
+    overflow-x: scroll;
+    margin-bottom: 36px;
+    /* background: #ff5500; */
+	margin-left: 1px;
+	/* height: 100%; */
+}
+}
+
+
+@media (max-width: 1150px){
+.home-content .sales-boxes {
+    flex-direction: column;
+    /* padding: 6px 1px 302px -12px; */
+}
+}
+
+@media (max-width: 400px){
+	.home-section {
+		width: 100%;
+		left: 0;
+		background: #0a2558;
+	}
+}
+
+@media (max-width: 400px){
+	.sidebar {
+		width: 0;
+		z-index: 1;
+	}
+}
+
+
+@media(max-width:400px){
+	.dropdown-menu.show{
+		float: none;
+		margin-left: 77px;
+    width: 182px;
+	
+
+	}
+}
+
+/* @media(max-width:400px){
+	.active{
+		margin-top: 12px;
+	}
+} */
+
+@media(max-width:400px){
+	#active1{
+		padding-left: 164px;
+        margin-top: -49px;
+	}
+}
+
+/* @media(max-width:400px){
+	.active2{
+		margin-left: 185px;
+		margin-top: -51px;
+	}
+} */
+
+@media (max-width: 400px){
+.home-content .recent-sales.box {
+	margin-top: 265px;
+    height: 123px;
+}
+}
+
+@media(max-width:400px){
+	.active3{
+	    margin-top: 86px;
+	}
+}
+
+@media (max-width: 400px){
+.title {
+    margin-left: -47px;
+}
+}
+
+@media (max-width: 400px){
+.bx-user {
+    margin-top: -239px;
+    margin-left: 166px;
+}
+}
+
+
+@media(max-width:400px){
+	#links{
+		margin-top: -231px;
+	}
+}
+
+@media (max-width: 400px){
+#Numb {
+    margin-top: -146px;
+}
+}
+
+.number{
+	margin-left: -87px;
+    margin-top: 88px;
+    background: white;
+    border-radius: 21px;
+    box-sizing: border-box;
+    padding: 9px 14px 9px 11px;
+    color: black;
+}
+/* ========= AMRUTA CODE END======================== */
+
+/* =========================================   KAMAL CODE START   ================================= */
 
 /*  === Input field having file type ==== */
 input[type=file]::file-selector-button{
@@ -775,8 +977,12 @@ input[type=file]::file-selector-button:hover{
 
 /* === Partner in charge === */
 #Partner_in_charge{
-	/* background-color: red !important; */
+	
 	width: 32.7rem !important;
+}
+[aria-describedby="partner_in_charge"]{
+/* background-color: red !important; */
+width: 32.7rem !important;
 }
 
 .select2-selection__arrow{
@@ -785,7 +991,7 @@ input[type=file]::file-selector-button:hover{
 	width: 40px !important;
 	/* margin-top: 5px !important; */
 	margin-right: -0.2px !important;
-	right: -314px !important;
+	right: -317px !important;
 	border-top-right-radius: 2px;
 	border-bottom-right-radius: 2px;
 	font-size: 20px !important;
@@ -797,155 +1003,286 @@ input[type=file]::file-selector-button:hover{
     border-color: transparent transparent blue transparent !important;
 }
 
+
 /* === Search Field Inside dropdown list === */
 .select2-search__field:focus{
-	outline: none !important;
-	}
+outline: none !important;
+}
+
+/* ==== Calender === */
+.ui-datepicker-header{
+	background: #8bcb48 !important;
+	border: none !important;
+}
+
+/* === Submit Button === */
+#clientFormSubmit{
+	border: none;
+    background-color: #049fb7 !important;
+	margin-left: 424px;
+    margin-top: 4px;
+}
+#clientFormSubmit:hover{
+	 background-color: #015967 !important;
+}
+/* === Password input field in user form === */
+#password4{
 	
-	/* ==== Calender === */
-	.ui-datepicker-header{
-		background: #8bcb48 !important;
-		border: none !important;
-	}
-	
-	/* === Submit Button === */
-	.btn-primary{
-		border: none;
-		background-color: #0a8294 !important;
-	}
-	.btn-primary:hover{
-		 background-color: #015967 !important;
-	}
-	/* === Password input field in user form === */
-	#password{
-		/* background-color: red !important; */
-		border-radius: 0.25rem;
-		border: 1px solid #ced4da;
-		padding-left: 10px;
-		height: calc(1.5em + 0.75rem + 2px) !important;
-	}
-	#password:focus{
-		outline: none;
-		box-shadow: 0px 0px 1px 3px #01e4e4d2;
-		 
-	}
-	/* === client submit form === */
-	#clientsubmit{
-		width: 700px !important;
-		margin-left: 3%;
-	}
-	
-	/* === Previous and Next Button in view client === */
-	.pagination>li>a{
-		color: red !important;
-	}
-	
-	#section_userform1>#span{
-		margin-left: 248px !important;
-	}
-	
-	/* === In Workorder Form - legal name input dropdown ==== */
-	.select2-dropdown{
-		width: 523.5px !important;
-	}
-	
-	/* === Danger button(Delete) in assign to label === */
-	.btn-danger{
-	margin-left: -6px;
-	}
-	
-	/* === Workorder form - workorder number field === */
-	#workorder_no{
-		width: 523px !important;
-	}
-	/* === Workoder form - start and end date clock === */
-	.fa-clock-o{
-		color: rgba(0, 0, 255, 0.676) !important;
-	}
-	.input-group-text{
-	  background-color: skyblue !important;
-	}
-	/* === User Form === */
-	#usertypeid{
+	border-radius: 0.25rem;
+	border: 1px solid #ced4da;
+	padding-left: 10px;
+	height: calc(1.5em + 0.75rem + 2px) !important;
+} 
+#password4:focus{
+	outline: none;
+	box-shadow: 0px 0px 1px 3px #01e4e4d2;
+	 
+} 
+/* === client submit form === */
+#clientsubmit{
+	width: 700px !important;
+	margin-left: 3%;
+}
+
+/* === Previous and Next Button in view client === */
+.pagination>li>a{
+	color: red !important;
+}
+
+#section_userform1>#span{
+	margin-left: 248px !important;
+}
+
+/* === In Workorder Form - legal name input dropdown ==== */
+.select2-dropdown{
+	width: 523.5px !important;
+}
+
+/* === Danger button(Delete) in assign to label === */
+.btn-danger{
+margin-left: -6px;
+}
+
+/* === Workorder form - workorder number field === */
+#workorder_no{
+	width: 523px !important;
+}
+/* === Workoder form - start and end date clock === */
+.fa-clock-o{
+	color: rgba(0, 0, 255, 0.676) !important;
+}
+.input-group-text{
+  background-color: skyblue !important;
+}
+/* === User Form === */
+#usertypeid{
+width: 32.7rem !important;
+}
+#type_of_work{
 	width: 32.7rem !important;
-	}
-	#type_of_work{
-		width: 32.7rem !important;
-	}
-	#password{
-		width: 32.7rem !important;
-	}
+}
+
+/* === Its was effecting with user profile forms so commented === */
+#password4{
+	width: 32.7rem !important;
+} 
+/* === View form Input field === */
+.font-weight-bold {
+   
+    margin-left: -340px;
+    margin-right: 10px;
+}
+
+/*=== View Workorder Header Text ===  */
+#section_viewworkorder>h2{
 	
-	/* === View form Input field === */
-	.font-weight-bold {
-	   
-		margin-left: -340px;
-		margin-right: 10px;
-	}
+	margin-left: 46px;
+}
+
+/* === View Workorder Drop Down === */
+[aria-labelledby="select2-workorderids-container"]{
+	width: 523px !important;
+		/* background-color:  green !important; */
+		position: relative !important;
+}
+
+/* === View Workorder Drop Down Arrow === */
+[aria-labelledby="select2-workorderids-container"] >.select2-selection__arrow{
 	
-	/*=== View Workorder Header Text ===  */
-	#section_viewworkorder>h2{
-		
-		margin-left: 46px;
-	}
+	right: 0px !important;
+	top: 0px !important;
 	
-	/* === View Workorder Drop Down === */
-	[aria-labelledby="select2-workorderids-container"]{
-		width: 523px !important;
-			/* background-color:  green !important; */
-			position: relative !important;
-	}
-	
-	/* === View Workorder Drop Down Arrow === */
-	[aria-labelledby="select2-workorderids-container"] >.select2-selection__arrow{
-		
-		right: 0px !important;
-		top: 0px !important;
-		
-	}
-	
-	[aria-labelledby="select2-slct1-container"]>.select2-selection__arrow{
-		right:-19.6rem !important;
-		/* background-color: red !important;	 */
-	}
-	
-	.select2-container .select2-selection--single .select2-selection__rendered {
-		padding-right: 171px !important;
-	}
+}
+
+[aria-labelledby="select2-slct1-container"]>.select2-selection__arrow{
+	right:-20rem !important;
+	/* background-color: red !important;	 */
+}
+
+.select2-container .select2-selection--single .select2-selection__rendered {
+	padding-right: 171px !important;
+}
 .container {
-    margin-left: 206px;
+	margin-top: 86px;
+    margin-left: 110px;
 	border-radius: 5px;
 }
-#remarks::placeholder{
-	padding-top: 12px;
+
+
+/* ==== Client Form - CSV File Upload Section ==== */
+.or{
+	/* color: #fff; */
+	background-color: transparent;
+	position: absolute;
+	top: 200px;
+	right: 350px;
+	z-index: 1;
 }
 
-/* profile password change password button */
 
-.float-right{
-	color: #fff;
-    background-color: #2b4cf1;
-    border: none;
-    border-radius: 6px;
-    width: 64%;
-    height: 42px;
+
+
+/* ==== Client Form new code ==== */
+.uploadBtn{
+	position: absolute;
+	 top: 433px !important;
+    left: -298px !important;
+	height: 33px !important;
+	padding: 3px;
 }
-
-#togglePassword{
+/* ==== Client Form Subit Button ==== */
+input#clientFormSubmit{
 	
 }
 
-
-/* myprofile dropdown css */
-
-.dropdown-menu {
-    position: absolute;
-    /* right: -9px; */
-    margin-left: -42px;
+/* === Upload CSV file label === */
+.uploadClientCSV{
+	background-color: #17a2b8;
+	border-radius: 7px;
+	cursor: pointer;
+	color: #fff;
+	position: absolute;
+	top: 185px;
+	left: 100px;
+	padding: 10px;
 }
 
-/* table for all text align  */
-
-tbody {
-    text-align: center;
+/* === File input-It is hidden-getting control via label === */
+#chooseFile{
+	position: absolute;
+	top: 185px;
+	left: 100px;
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
 }
+
+/* === Submit button of file === */
+#clientCSVSubmit{
+	display: none;
+}
+/* === Client Form submit button === */
+#section_clientform{
+	height: 600px !important;
+}
+/* === Selected CSV File Name (In client Form) ==== */
+#selectedFileName{
+	display: none;
+	position: absolute;
+	top: 142px;
+	left: 100px;
+}
+#fileName{
+	display: none;
+	font-size: 16px !important;
+	position: absolute;
+	top: -56px;
+	left: 124px;
+	width: 300px;
+}
+/* === CSV File upload success message ==== */
+.text-success{
+	margin-top: -342px !important;
+    margin-left: 790px !important;
+    width: 300px !important;
+}
+/* === Add more plus icon disapble in large screen === */
+.bxs-plus-square{
+	display: none !important;
+}
+/* === Mobile Responsive === */
+@media screen and (max-width: 600px){
+	.container{
+		border: none !important;
+		box-shadow: none !important;
+		height: 1050px !important;
+		margin-right: 140px !important;
+		width: 355px !important;
+		margin-left: 11px !important;
+		height: 1075px !important;
+
+	}
+	#workorder_form{
+		margin-left: -12px !important;
+	}
+	
+	/* === Workorder label - in create workorder number ==== */
+	#section_userform>.span{
+		margin: 10px 0px 0px 14px !important;
+		font-size: 18px;
+		padding-top: 15px !important;
+	}
+	/* === Workorder Submit button === */
+	.btn-info{
+		margin: 4px 0 0 120px !important;
+	}
+	/* === Type of work === */
+	#type_of_work{
+		width: 20rem !important;
+	}
+	/* === Workorder number input field === */
+	#workorder_no{
+		width: 20rem!important;
+	}
+	/* === Created on Input field === */
+	.form-control{
+		width: 20rem !important;
+	}
+	/* === Legal and Trade Name === */
+	.select2-selection--single{
+		width: 20rem !important;
+	}
+	[aria-labelledby="select2-slct1-container"]>.select2-selection__arrow{
+		right: -7.1rem !important;
+	}
+	span.select2-dropdown.select2-dropdown--above{
+		width: 319px !important;
+	}
+	/* === Partner In Charge ===  */
+	#partner_in_charge{
+		width: 20rem !important;
+	}
+
+	/* === Asign to input field === */
+	select#select{
+		width: 270px !important;
+	}
+	/* === Delete Buttom ==== */
+	.btn-danger{
+		display: none !important;
+	}
+	/* === Add More text button disable in mobile view === */
+	#btnAdd{
+		display: none;
+	}
+	/* === Add more plus icon display in small screen === */
+.bxs-plus-square{
+	display: block !important;
+	font-size: 49px;
+	position: absolute !important;
+	top: -59px;
+	right: 3px;
+}
+}
+
+/* =========================================   KAMAL CODE END   ================================= */
